--- a/LaTeX/Rapport/biblio.bib
+++ b/LaTeX/Rapport/biblio.bib
@@ -110,3 +110,9 @@
 	note={}
 }
 
+% note={https://root.cern/doc/master/treefriend_8C.html}
+@misc{root:treeFriend,
+	author={Brun, Rene},
+	title={treefriend.C File Reference},
+	institution={CERN}
+}
