--- a/LaTeX/Rapport/Hocine.tex
+++ b/LaTeX/Rapport/Hocine.tex
@@ -62,7 +62,6 @@
 \newcommand{\particle}[1]{$\texttt{#1}$}
 
 \newcommand{\bbar}{\overline{b}}
-
 \newcommand{\Wstar}{W^{\star}}
 
 \newcommand{\electron}{e^{+}}
@@ -77,16 +76,11 @@
 % physique
 \newcommand{\GeV}{\texttt{GeV}}
 \newcommand{\TeV}{\texttt{TeV}}
+\newcommand{\MeV}{\texttt{MeV}}
 
 % LaTeX
 
 \newcommand{\Figure}[1]{[\textsc{Figure~#1}]}
-
-\newcommand{\be}{\begin{enumerate}}
-\newcommand{\ee}{\end{enumerate}}
-
-\newcommand{\bi}{\begin{itemize}}
-\newcommand{\ei}{\end{itemize}}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% corps du document %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
