--- a/LaTeX/Rapport/Hocine.tex
+++ b/LaTeX/Rapport/Hocine.tex
@@ -43,8 +43,9 @@
 \newcommand{\iLCSoft}{\texttt{iLCSoft}\xspace}
 \newcommand{\LCIO}{\texttt{LCIO}\xspace}
 \newcommand{\Marlin}{\texttt{Marlin}\xspace}
-%\newcommand{\Key4HEP}{\texttt{Key4HEP}\xspace}
 \newcommand{\Gaudi}{\texttt{Gaudi}\xspace}
+\newcommand{\FCC}{\texttt{FCC}\xspace}
+\newcommand{\EDMhep}{\texttt{EDM4hep}\xspace}
 
 \newcommand{\nnhAnalysis}{\texttt{nnhAnalysis}\xspace}
 
@@ -74,9 +75,9 @@
 \newcommand{\WW}{$\mathrm{W\Wstar}$\xspace}
 
 % physique
-\newcommand{\GeV}{\texttt{GeV}}
-\newcommand{\TeV}{\texttt{TeV}}
-\newcommand{\MeV}{\texttt{MeV}}
+\newcommand{\GeV}{\texttt{GeV}\xspace}
+\newcommand{\TeV}{\texttt{TeV}\xspace}
+\newcommand{\MeV}{\texttt{MeV}\xspace}
 
 % LaTeX
 
@@ -103,198 +104,23 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Projet \texttt{ILC}}
-
-\section{Présentation du Projet ILC}
-
-Le projet ILC (International Linear Collider) est un collisionneur linéaire, électron-positron, de 31 km conçu pour atteindre une énergie de centre de masse de 500 \GeV \cite{cern:ilc}. \\
-
-\begin{figure}[h!]
-	\center
-	\includegraphics[width=\textwidth]{../img/ilc.jpg} 
-	\caption{Schéma ILC\cite{cern:ilc}}
-	\label{ilc:schema}
-\end{figure}
-
-L'objectif de l'ILC est de produire beaucoup de boson de Higgs, notamment pour découvrir s'il y en a d'autres générations du boson de Higgs. Et plus globalement pour rechercher de la nouvelle physique, par de nouveaux écarts avec le \MS.\\
-
-À l'heure actuelle, ce projet attend les autorisations pour lancer sa construction, probablement dans les montagnes au nord du Japon. 
-Et le détecteur SDHCAL correspond parfaitement aux spécifications nécessaires pour un accélérateur linéaire de ce type.
-C'est pourquoi, afin de consolider sa candidature pour l'appel d'offre, l'IP2I développe aussi des programmes d'analyse de ce détecteur.
-
-\section{Programme : \original}
-
-% Contexte
-Au début de mon stage, j'ai récupéré les codes de Guillaume \textsc{Garillot}, qui les a développé en 2021 au cours de son post-doctorat à l'IP2I. 
-
-Son projet se divise en 3 programmes indépendants \Figure{\ref{orga:init}} :
-
-\begin{description}
-	
-	\item[\texttt{miniDSTMarker}] qui permet de récupérer les données\footnote{aujourd'hui simulées mais plus tard obtenues dans le détecteur} sur le serveur distant où elles sont stockées.
-	
-	\item[\texttt{processor}] permet de tirer, des données brutes précédentes, des arbres \ROOT s.
-	
-	\item[\texttt{analysis}] utilise les méthodes des arbres binaires boostés pour effectuer une analyse statistique des arbres \ROOT issus du programme \texttt{processor}.
-	
-\end{description} 
-
-\input{figure/tikz/orgaInit.tex}
-
-En résumer, ce projet permet l'analyse des collisions survenues dans ce détecteur pour le projet ILC.
-
-
-\subsection{Données initiales}
-
-% données distantes : 
-
-Malheureusement, pour le temps de ce stage, je n'ai pas obtenu l'accès au serveur, donc je n'ai pas pu utilisé \texttt{miniDSTMarker}. Je l'ai donc pas testé, ni pu développer ma propre version. C'est pourquoi, j'ai décidé de ne pas l'inclure dans mon propre code.\\
-
-% données locales
-Pour que je puisse travailler, on a mis à ma disposition certains de quelqu'un de ces fichiers, ceux des collisions à 250 \GeV. Soient 66 dossiers \Figure{\ref{data:list}} de fichiers \LCIO, où chaque nom correspond au code du type de processus \Figure{\ref{data:def}}.
-
-\begin{figure}[h!]
-	\includegraphics[width=\textwidth]{../img/listeProcessus.png} 
-	\caption{Les noms des dossiers correspondent aux numéros de processus}
-	\label{data:list}
-\end{figure}
-
-\input{figure/tabular/codeProcessus.tex}
-
-\subsection{Conversion des fichiers initiaux en fichiers \ROOT}
-
-Grâce au programme \processor on va pouvoir convertir les fichiers initiaux \SLCIO en fichiers \ROOT standards, afin de pouvoir les analyser.\\
-
-On obtient ainsi pour chaque dossier de fichier de données \SLCIO un fichier \ROOT en sortie, \cad que l'on obtiendra un arbre \ROOT par type de processus.\\
-
-Ce programme doit être robuste et donc à partir des mêmes fichiers d'entrées toujours générer des fichiers \ROOT strictement identiques.
-
-\subsection{Analyses des collisions}
-
-\subsubsection{Étape 1}
-
-Avant de commencer l'analyse des fichiers \ROOT générés précédemment, on va terminer ce que le programme \processor avait commencé, et fusionner l'intégralité de ces fichiers en un seul gros fichier \texttt{DATA.root}, grâce à la commande \texttt{hadd}. 
-Cette commande a été développé par le CERN et elle fusionne tous les histogrammes de différents fichiers en un seul\cite{root:hadd}. 
-
-Donc là encore, la répétition de ce programme doit toujours générer des fichiers \texttt{DATA.root} strictement identique.
-
-\subsubsection{Étape 2}
-
-Pour la deuxième étape de ce programme \analysis, on va trier nos données en 4 fichiers distincts. 
-Mais au lieu de les séparer par leur numéro de processus, qui est un critère numérique donc éloigné de la réalité des résultats d'une véritable expérience, on va les diviser suivant la polarisation initiale des particules incidentes, \cad l'électron et le positron à -0,8 et 0,3 ou les 2 nulles. 
-Et par le type de particules produites par un boson de Higgs, \cad les canaux \bb et \WW, puisque ce sont les plus probables\footnote{Rien n'empêchera d'ajouter d'autres canaux même si le code manque encore de un peu de modularité.}.
-
-\begin{figure}[h!]
-	\centering
-	\includegraphics[width=\textwidth]{../img/Higgs_decay_125GeV.png} 
-	\caption{
-		Les modes de désintégrations du boson de Higgs à 125 \GeV 
-		\cite{liu:tel-03405418}
-	}
-\end{figure}
-
-Donc on obtient ces 4 fichiers suivants :
-
-\input{figure/tabular/splitFiles.tex}
-
-Dans chacun de ces fichiers les arbres \ROOT, \texttt{TTree}, auront les variables suivantes :
-
-\begin{description}
-
-	\item[\texttt{isSignal} :] booléen qui indique si on considère l'évènement comme du signal ou du bruit de fond.
-	
-	\item[\texttt{channelType} :] entier qui représente le type de canaux de l'évènement \Figure{\ref{data:code}}:
-	\begin{itemize}
-		\item 2 fermions leptoniques ou hadroniques
-		\item 4 fermions leptoniques ou semi-leptoniques ou hadroniques 
-		\item une autre type de résultat avec un boson de Higgs
-	\end{itemize}
-	
-	\item[\texttt{isTrain}] booléen qui confirme si l'évènement a été entrainé ou testé par la BDT.
-	
-	\item[\texttt{preSelected}] booléen, si l'évènement a été pré-sélectionné par la BDT.
-	
-	\item[\texttt{weight}] flottant qui est le poids de l'évènement en $fb^{-1}$ de la luminosité intégrée.
-	
-\end{description}
-
-
-Pour trier les données du fichier \texttt{DATA.root}, on va utiliser des BDT pour \textit{Boosted Decision Tree}, en français, des arbres de décision boostés. 
-
-Les arbres sont des structures de données courantes en informatique, ils sont utilisées notamment pour trier les données car ils ont une rapidité optimale en temps. 
-Ici on utilise les arbres pour déterminer la nature des particules en répondant à des questions booléennes (Similaire à l'exemple \Figure{\ref{ExampleBDT}}. Et comme il n'y a que 2 issus à chaque nœud, on parle d'arbre binaire. 
-
-\begin{figure}[h!]
-	\center
-	\includegraphics[width=\textwidth]{../img/ExampleBDT.png}
-	\caption{Exemple de BDT \cite{liu:tel-03405418}. Ici, elle permet de déterminer de le type d'une particule}
-	\label{ExampleBDT}
-\end{figure}
-
-Une fois encore, des méthodes ont déjà été développé dans l'API du CERN\cite{root:treeFriend}. Ces méthodes utilisent des paramètres générées aléatoirement afin d'augmenter la rapidité des calculs. C'est pourquoi on parle d'arbre boosté.
-
-Mais cette fois-ci les fichiers créés sont équivalents mais pas identique. Car les BDT utilisent la génération de nombre aléatoire, ce qui engendre des variations dans les entraînements.
-
-\subsubsection{Étape 3}
-
-Et pour terminer, on peut enfin effectuer l'analyse à proprement parlé de nos données à partir des fichiers \texttt{split\_XX.root} précédents \Figure{\ref{files:split}}.
-
-Cette étude se fait sur les fichiers avec une polarisation non nulle pour les particules incidentes. Car \doToList{????}
-
-
-\input{figure/tabular/modelFiles.tex}
-	
-\input{figure/tabular/scoresFiles.tex}
-
-\input{figure/tabular/bestSelectionFiles.tex}
-
-\input{figure/tabular/statsFiles.tex}
-
-Et même si cette analyse sera toujours la même \qqs les fichiers \texttt{split\_XX.root}, ces derniers étant légèrement différent d'un entraînement à l'autre les résultats statistiques \Figure{\ref{files:stats}} seront, là encore, légèrement différent mais doivent rester équivalent.
-
-\section{Programme : \ilcsoft}
-
-À présent, je vais vous présenter les modifications que j'ai apporté au programme \original.
-
-Dans un premier temps, j'ai fais de la cosmétique : j'ai typé les variables, appliqué les bonnes règles de typographie et commenté les différents fichiers, classes, interfaces, fonctions, et variables globales. Ce qui m'a permis de bien comprendre les programmes et de le rendre plus lisible pour les futurs développeurs de ce code.
-
-Ensuite je les ai modifié pour qu'il puisse s'exécuter en parallèle. En effet, \processor et \analysis mettent quelques heures à s'exécuter. Et pour tester leurs robustesses et pouvoir faire des statistiques, il est nécessaire de le faire de très nombreuses fois. Donc cette nouvelle fonctionnalité la version \ilcsoft permet un gain de temps considérable. Et plus tard, cela permettra aussi d'exécuter avec différents jeux de données (niveaux d'énergies, canaux...).
-
-\subsection{Données}
-
-Donc bien sûr, il s'agit des mêmes fichiers \SLCIO que pour le programme \original \Figure{\ref{data:list}}
-
-\subsection{Programme : \processor}
-
-Le but est toujours la conversion de chaque dossier de fichiers \SLCIO en un seul fichier \ROOT.
-
-Pour aider à la lisibilité du programme, j'ai aussi développé une nouvelle classe qui permet de simplifier sa lecture.
-Ma classe \texttt{PDGInfo} permet de manipuler plus facilement les outils du PDG, grâce à une correspondance entre les codes entiers des particules et leurs noms, ainsi que quelques méthodes et tests booléennes\footnote{\url{https://github.com/alexhxia/nnhAnalysis/blob/main/nnhProgram/ilcsoft/processor/include/PDGInfo.hh}}.
-
-\subsection{Programme : \analysis}
-
-La encore le fonctionnement global reste inchangé, par rapport à \original
+\input{iLCSoft.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Programme \texttt{FCC}}
 
-\section{Projet FCC}
-
-\subsection{Présentation}
+\section{Présentation du Projet FCC}
 
 Le FCC (Futur Collisionneur Circulaire) est le projet du CERN pour remplacer 
 leur collisionneur actuelle, le LHC (Large Hadronic Collider). 
-Dont la fin de l'exploitation est prévu en 2040 \cite{cern:fcc}
-
-Pour le FCC, on prévoit un anneau de 100 km, contre 27 km pour le LEP et le LHC 
+Dont la fin de l'exploitation est prévu en 2040 \cite{cern:fcc}.
+On prévoit un anneau de 100 km, contre 27 km pour le LEP et le LHC 
 (comme montrer Figure~\ref{fcc:img}).
 Ce qui devrait nous permettra d'atteindre une énergie de 100 \TeV contre 13 \TeV
 actuellement pour le LHC.
 
-L'objectif est de rechercher d'une nouvelle physique, en mettant au jour de 
-déviation avec le modèle standard.
-
+L'objectif est la rechercher d'une nouvelle physique par la mise en évidence de déviation avec le modèle standard. Et plus particulièrement, en augmentant la statistique sur le boson de Higgs, découvert avec le collisionneur actuelle, afin de mieux comprendre sa physique.
 
 \begin{figure}[h!]
     \centering
@@ -303,30 +129,70 @@ déviation avec le modèle standard.
     \label{fcc:img}
 \end{figure}
 
+Une fois encore, le détecteur SDHCAL candidate pour ce projet et pourrait être y être installer.
+
 \section{Développement Numérique}
 
-Mon objectif dans ce stage est de transformer les codes développés par Guillaume 
-\textsc{Garillot} lors de son post-doctorat pour le projet ILC pour ce projet 
-qui n'utilise pas les mêmes suites logiciels.
+Mon objectif est d'adapter les codes développés précédemment par Guillaume 
+\textsc{Garillot} du projet ILC au projet FCC qui n'utilise pas les mêmes suites logiciels.\\
 
-\texttt{Gaudi}
 
-\texttt{EDM4hep}
+\subsection{\convert}
 
-\section{Travail de Stage}
+Dans un premier temps, je dois convertir les fichiers \SLCIO en fichiers \ROOT en utilisant le programme libre \texttt{k4MarlinWrapper} du projet de \texttt{key4hep}\footnote{\url{https://github.com/key4hep/k4MarlinWrapper}}. 
+Il s'agit d'une collaboration entre chercheurs du CERN dont l'objectif est de développer des outils pour le projet FCC, y compris des utils de conversion entre \LCIO (\iLCSoft) et \EDMhep (\FCC).%, en utilisant les algorithmes \texttt{Gaudi}
+\\
 
-\section{Comparaison avec \texttt{iLCSoft}}
+Cette partie a été laborieux, car le programme \texttt{k4MarlinWrapper} est en cours de développement. 
+J'ai du faire remonter de très nombreux problèmes en parallèle de mon travail. 
+En effet, à chaque mise à jour, le programme ne fonctionnait plus, ce qui m'a fait perdre beaucoup de temps en essayant de comprendre le problème, le signaler et le corriger quand je le comprenais, ou patienter pour que quelqu'un d'autre le corrige. 
+
+\subsection{\processor}
+
+Comme les fichiers d'entrées sont à présent des fichiers \ROOT, il faut adapter cette partie pour que les fichiers de sortie soit les mêmes ou au moins équivalent.
+
+\subsection{\analysis}
+
+Cette partie reste inchangé par rapport à \ilcsoft.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Outils Numériques}
 
-\section{\texttt{nnhScript}}
-\url{https://github.com/alexhxia/nnhAnalysis/tree/main/nnhScript}
+Pour utiliser et comparer les résultats obtenus facilement, j'ai développé de très nombreux programmes supplémentaires afin de pouvoir automatiser leur utilisation, mais aussi de les exécuter sur un serveur distant. 
 
-\section{\texttt{nnhTest}}
+\section{Répertoire \texttt{script}}
 
-Pour tester les programmes générer avec \texttt{nnhProgram}, j'ai développé 4 programmes en \texttt{python} : 
+Dans ce dossier\footnote{\url{https://github.com/alexhxia/nnhAnalysis/tree/main/script}}, j'ai développé des outils d'automatisation de l'exécution des programmes. En effet, avant pour lancer un \processor ou une \analysis il y avait de très nombreuses commandes à taper au terminal et parfois incompatible entre elles.
+J'ai donc développé 6 programmes principaux d'automatisation des programmes :
+
+\begin{description}
+	
+	\item[\texttt{nnh}]	programme générale qui permet l'exécution de tout le programme (\convert, \processor et \analysis) et plusieurs fois.
+	\begin{description}
+
+	\item[\texttt{nnhConvert}] permet de convertir les fichiers \SLCIO en fichiers \ROOT.
+	
+	\item[\texttt{nnhProcessor}] d'exécuter tout le programme \processor.
+	
+	\item[\texttt{nnhAnalysis}] exécute tout le programme \analysis.
+	
+	\begin{description}
+		
+		\item[\texttt{prepareBDT}] exécute la préparation de la BDT.
+		
+		\item[\texttt{launchBDT}] lance la BDT \footnote{Le programme \texttt{launchBDT} est incompatible avec les autres, ce qui nécessite de le lancer dans un terminal enfant.}.
+		
+	\end{description}
+	\end{description}
+	
+\end{description}
+
+Chacun de ces programmes peuvent être lancé ensemble mais aussi séparément. Ce qui permet de gagner énormément en temps d'utilisation mais aussi de pouvoir personnaliser selon les besoins de l'utilisateur.
+
+\section{Répertoire \texttt{test}}
+
+Pour tester les résultats obtenus, j'ai développé 4 programmes en \texttt{python}.  Et de tester s'ils sont compatibles entre eux.
 
 \begin{figure}[h!]
 	\center
@@ -344,25 +210,49 @@ Pour tester les programmes générer avec \texttt{nnhProgram}, j'ai développé 
 
 \subsection{Programmes \texttt{testXxCompleted.py}}
 
-L'objectif de ce type de programme est de tester si tous les fichiers ont été généré.
+L'objectif de ce type de programme est de tester si tous les fichiers qui aurait du être créer, l'ont bien été. Ces programmes sont très rapides, ne prennent que en quelques secondes.
+
+Ce qui permet, en cas de problèmes de relancer juste la partie qui n'est pas terminé et pas tout le programme.
 
 \subsubsection{Programmes \texttt{testProcessorCompleted.py}}
 
-Le processus est complet si tous les dossiers de 
+Un \processor est complet si tous les dossiers du répertoire d'entré (\Figure{\ref{data:list}}) ont bien généré un fichier \ROOT.
 
 \subsubsection{Programmes \texttt{testAnalysisCompleted.py}}
 
+Une \analysis est complète si elle contient 13 fichiers, car :
+\begin{description}
+	\item[hadd :] 1 fichier \verb|data.root|
+	\item[prepareBDT :] 4 fichiers (2 polarisations $\times$ 2 canaux) \verb|split_XX.root| 
+	\item[launchBDT :] 2 fichiers (2 canaux) \verb|model_XX.joblib|, \verb|scores_XX.root|, \verb|bestSelection_XX.root|, \verb|stats_XX.json|
+\end{description}
 
 \subsection{Programmes \texttt{testXxSame.py}}
 
+Ce type de programme\footnote{\url{https://github.com/alexhxia/nnhAnalysis/tree/main/test}
+} va prendre quelques dizaines de minutes à une heure pour s'exécuter, car il va comparer tous les arbres \ROOT des différents fichiers pour s'assurer que 2 fichiers sont identiques ou au moins compatibles. Cette comparaison se ferait avec la fonction de Kolmogorov présente, là encore, dans l'API du CERN, qui compare 2 histogrammes et retourne un flottant sur leur compatibilité. Dans le chapitre \original, j'ai explicité que les programmes qui donnaient des résultats toujours identiques et ceux qui devaient avoir des résultats équivalents. 
+
 \subsubsection{Programmes \texttt{testProcessorSame.py}}
+
+Toutes les exécutions de \processor doivent donner des résultats identiques, surtout au sein du même projet. Et j'ai pu le confirmer en comparant plusieurs résultats obtenus de différentes exécutions. 
+
+Et lorsque j'ai apporté des corrections au programme, quand je suis passée de \original à \ilcsoft, cela m'a permis de vérifier que mon code obtenait bien le même résultat. De même, de \ilcsoft à \fcc.
 
 \subsubsection{Programmes \texttt{testAnalysisSame.py}}
 
-\paragraph{Vérification des résultats}
-Comparaison entre les différents séries d'analyse, basée sur les même fichiers \ROOT, mais un autre entraînement de BDT.
+La comparaison entre 2 exécutions du programme \analysis est plus compliquée, puisque la BDT utilise des nombres aléatoires, ce qui ne permet pas d'obtenir des résultats identiques.
 
-\url{https://github.com/alexhxia/nnhAnalysis/tree/main/nnhTest}
+Certains fichiers doivent rester identiques comme les fichiers \verb|data.root| ou \verb|split_XX.root|. Certains sont complètement différents comme les fichiers \verb|model_XX.joblib| ou \verb|bestSelection_XX.root|, car ils sont liés à l'entraînement de la BDT. Mais à la fin les fichiers \verb|stat_XX.json| doivent être statistiquement compatibles.
+
+\subsection{Répertoire \texttt{result}}
+
+Dans ce répertoire, je place les fichiers de sorti des programmes \texttt{test}. 
+En effet, quand on exécute un programme de test, l'utilisateur a la possibilité d'obtenir les résultats sous la forme d'un fichier \texttt{JSON}. 
+Ce qui permet d'en garder une trace et de ne pas refaire un test déjà effectué.\\
+
+\subsection{Mes résultats}
+
+Je peux donc confirmer que mes programmes s'exécutent complètement et correctement.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
