--- a/LaTeX/Rapport/iLCSoft.tex
+++ b/LaTeX/Rapport/iLCSoft.tex
@@ -1,61 +1,172 @@
-\chapter{\texttt{ILC}}
 
-\section{Présentation}
+\chapter{Projet \texttt{ILC}}
 
-Le projet ILC (International Linear Collider) est un collisionneur linéaire de 20 km
-conçu pour atteindre une énergie de centre de masse de 500 GeV. 
+\section{Présentation du Projet ILC}
 
-\section{Projet \nnhAnalysis}
-
-\section{Programme \processor}
-
-\subsubsection{Données}
-Initialement, on m'a mis à disposition des fichiers \SLCIO rangés par processus dans 66 dossiers (Figure~\ref{listeProcessus}).
+Le projet ILC (International Linear Collider) est un collisionneur linéaire, électron-positron, de 31 km conçu pour atteindre une énergie de centre de masse de 500 \GeV \cite{cern:ilc}. \\
 
 \begin{figure}[h!]
-	%\includegraphics[width=\textwidth]{../img/listeProcessus.png} 
-	\caption{Les noms des dossiers qui correspondent aux numéros de processus}
-	\label{listeProcessus}
-	
+	\center
+	\includegraphics[width=\textwidth]{../img/ilc.jpg} 
+	\caption{Schéma ILC\cite{cern:ilc}}
+	\label{ilc:schema}
 \end{figure}
 
-\paragraph{Numéro des processus ???}
+L'objectif de l'ILC est de produire beaucoup de boson de Higgs, notamment pour découvrir s'il y en a d'autres générations du boson de Higgs. Et plus globalement pour rechercher de la nouvelle physique, par de nouveaux écarts avec le \MS.\\
 
-%\paragraph{Résultats mis à disposition ???}
+À l'heure actuelle, ce projet attend les autorisations pour lancer sa construction, probablement dans les montagnes au nord du Japon. 
+Et le détecteur SDHCAL correspond parfaitement aux spécifications nécessaires pour un accélérateur linéaire de ce type.
+C'est pourquoi, afin de consolider sa candidature pour l'appel d'offre, l'IP2I développe aussi des programmes d'analyse de ce détecteur.
 
-\subsubsection{Méthodes}
+\section{Programme : \original}
 
-On cherche à convertir ces fichiers \SLCIO en arbre \ROOT par processus.
+% Contexte
+Au début de mon stage, j'ai récupéré les codes de Guillaume \textsc{Garillot}, qui les a développé en 2021 au cours de son post-doctorat à l'IP2I. 
 
-\subsubsection{Résultats}
+Son projet se divise en 3 programmes indépendants \Figure{\ref{orga:init}} :
 
-%\paragraph{Des fichiers \ROOT :}
-Chaque dossier de fichier de donnée \SLCIO produira un fichier \ROOT en sortie, \cad que l'on obtiendra un arbre \ROOT par processus.
+\begin{description}
+	
+	\item[\texttt{miniDSTMarker}] qui permet de récupérer les données\footnote{aujourd'hui simulées mais plus tard obtenues dans le détecteur} sur le serveur distant où elles sont stockées.
+	
+	\item[\texttt{processor}] permet de tirer, des données brutes précédentes, des arbres \ROOT s.
+	
+	\item[\texttt{analysis}] utilise les méthodes des arbres binaires boostés pour effectuer une analyse statistique des arbres \ROOT issus du programme \texttt{processor}.
+	
+\end{description} 
 
+\input{figure/tikz/orgaInit.tex}
 
-\subsubsection{Interprétation}
-
-\section{Programme \analysis}
-
-\subsubsection{Données}
-
-On récupère les fichiers \ROOT du programme \processor précédent. 
-
-$ hadd $ qui va créer le fichier DATA.root
-
-\subsubsection{Méthodes}
-
-\paragraph{\texttt{BDT}}
-
-Entrainement
-
-\paragraph{L'analyse}
+En résumer, ce projet permet l'analyse des collisions survenues dans ce détecteur pour le projet ILC.
 
 
+\subsection{Données initiales}
 
-\subsubsection{Résultats}
+% données distantes : 
 
-\paragraph{Vérification des résultats}
-Comparaison entre les différents séries d'analyse, basée sur les même fichiers \ROOT, mais un autre entraînement de BDT.
+Malheureusement, pour le temps de ce stage, je n'ai pas obtenu l'accès au serveur, donc je n'ai pas pu utilisé \texttt{miniDSTMarker}. Je l'ai donc pas testé, ni pu développer ma propre version. C'est pourquoi, j'ai décidé de ne pas l'inclure dans mon propre code.\\
 
-\subsubsection{Interprétation}
+% données locales
+Pour que je puisse travailler, on a mis à ma disposition certains de quelqu'un de ces fichiers, ceux des collisions à 250 \GeV. Soient 66 dossiers \Figure{\ref{data:list}} de fichiers \LCIO, où chaque nom correspond au code du type de processus \Figure{\ref{data:def}}.
+
+\begin{figure}[h!]
+	\includegraphics[width=\textwidth]{../img/listeProcessus.png} 
+	\caption{Les noms des dossiers correspondent aux numéros de processus}
+	\label{data:list}
+\end{figure}
+
+\input{figure/tabular/codeProcessus.tex}
+
+\subsection{Conversion des fichiers initiaux en fichiers \ROOT}
+
+Grâce au programme \processor on va pouvoir convertir les fichiers initiaux \SLCIO en fichiers \ROOT standards, afin de pouvoir les analyser.\\
+
+On obtient ainsi pour chaque dossier de fichier de données \SLCIO un fichier \ROOT en sortie, \cad que l'on obtiendra un arbre \ROOT par type de processus.\\
+
+Ce programme doit être robuste et donc à partir des mêmes fichiers d'entrées toujours générer des fichiers \ROOT strictement identiques.
+
+\subsection{Analyses des collisions}
+
+\subsubsection{Étape 1}
+
+Avant de commencer l'analyse des fichiers \ROOT générés précédemment, on va terminer ce que le programme \processor avait commencé, et fusionner l'intégralité de ces fichiers en un seul gros fichier \texttt{DATA.root}, grâce à la commande \texttt{hadd}. 
+Cette commande a été développé par le CERN et elle fusionne tous les histogrammes de différents fichiers en un seul\cite{root:hadd}. 
+
+Donc là encore, la répétition de ce programme doit toujours générer des fichiers \texttt{DATA.root} strictement identique.
+
+\subsubsection{Étape 2}
+
+Pour la deuxième étape de ce programme \analysis, on va trier nos données en 4 fichiers distincts. 
+Mais au lieu de les séparer par leur numéro de processus, qui est un critère numérique donc éloigné de la réalité des résultats d'une véritable expérience, on va les diviser suivant la polarisation initiale des particules incidentes, \cad l'électron et le positron à -0,8 et 0,3 ou les 2 nulles. 
+Et par le type de particules produites par un boson de Higgs, \cad les canaux \bb et \WW, puisque ce sont les plus probables\footnote{Rien n'empêchera d'ajouter d'autres canaux même si le code manque encore de un peu de modularité.}.
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\textwidth]{../img/Higgs_decay_125GeV.png} 
+	\caption{
+		Les modes de désintégrations du boson de Higgs à 125 \GeV 
+		\cite{liu:tel-03405418}
+	}
+\end{figure}
+
+Donc on obtient ces 4 fichiers suivants :
+
+\input{figure/tabular/splitFiles.tex}
+
+Dans chacun de ces fichiers les arbres \ROOT, \texttt{TTree}, auront les variables suivantes :
+
+\begin{description}
+
+	\item[\texttt{isSignal} :] booléen qui indique si on considère l'évènement comme du signal ou du bruit de fond.
+	
+	\item[\texttt{channelType} :] entier qui représente le type de canaux de l'évènement \Figure{\ref{data:code}}:
+	\begin{itemize}
+		\item 2 fermions leptoniques ou hadroniques
+		\item 4 fermions leptoniques ou semi-leptoniques ou hadroniques 
+		\item une autre type de résultat avec un boson de Higgs
+	\end{itemize}
+	
+	\item[\texttt{isTrain}] booléen qui confirme si l'évènement a été entrainé ou testé par la BDT.
+	
+	\item[\texttt{preSelected}] booléen, si l'évènement a été pré-sélectionné par la BDT.
+	
+	\item[\texttt{weight}] flottant qui est le poids de l'évènement en $fb^{-1}$ de la luminosité intégrée.
+	
+\end{description}
+
+
+Pour trier les données du fichier \texttt{DATA.root}, on va utiliser des BDT pour \textit{Boosted Decision Tree}, en français, des arbres de décision boostés. 
+
+Les arbres sont des structures de données courantes en informatique, ils sont utilisées notamment pour trier les données car ils ont une rapidité optimale en temps. 
+Ici on utilise les arbres pour déterminer la nature des particules en répondant à des questions booléennes (Similaire à l'exemple \Figure{\ref{ExampleBDT}}. Et comme il n'y a que 2 issus à chaque nœud, on parle d'arbre binaire. 
+
+\begin{figure}[h!]
+	\center
+	\includegraphics[width=\textwidth]{../img/ExampleBDT.png}
+	\caption{Exemple de BDT \cite{liu:tel-03405418}. Ici, elle permet de déterminer de le type d'une particule}
+	\label{ExampleBDT}
+\end{figure}
+
+Une fois encore, des méthodes ont déjà été développé dans l'API du CERN\cite{root:treeFriend}. Ces méthodes utilisent des paramètres générées aléatoirement afin d'augmenter la rapidité des calculs. C'est pourquoi on parle d'arbre boosté.
+
+Mais cette fois-ci les fichiers créés sont équivalents mais pas identique. Car les BDT utilisent la génération de nombre aléatoire, ce qui engendre des variations dans les entraînements.
+
+\subsubsection{Étape 3}
+
+Et pour terminer, on peut enfin effectuer l'analyse à proprement parlé de nos données à partir des fichiers \texttt{split\_XX.root} précédents \Figure{\ref{files:split}}.
+
+Cette étude se fait sur les fichiers avec une polarisation non nulle pour les particules incidentes. Car \doToList{????}
+
+
+\input{figure/tabular/modelFiles.tex}
+	
+\input{figure/tabular/scoresFiles.tex}
+
+\input{figure/tabular/bestSelectionFiles.tex}
+
+\input{figure/tabular/statsFiles.tex}
+
+Et même si cette analyse sera toujours la même \qqs les fichiers \texttt{split\_XX.root}, ces derniers étant légèrement différent d'un entraînement à l'autre les résultats statistiques \Figure{\ref{files:stats}} seront, là encore, légèrement différent mais doivent rester équivalent.
+
+\section{Programme : \ilcsoft}
+
+À présent, je vais vous présenter les modifications que j'ai apporté au programme \original.
+
+Dans un premier temps, j'ai fais de la cosmétique : j'ai typé les variables, appliqué les bonnes règles de typographie et commenté les différents fichiers, classes, interfaces, fonctions, et variables globales. Ce qui m'a permis de bien comprendre les programmes et de le rendre plus lisible pour les futurs développeurs de ce code.
+
+Ensuite je les ai modifié pour qu'il puisse s'exécuter en parallèle. En effet, \processor et \analysis mettent quelques heures à s'exécuter. Et pour tester leurs robustesses et pouvoir faire des statistiques, il est nécessaire de le faire de très nombreuses fois. Donc cette nouvelle fonctionnalité la version \ilcsoft permet un gain de temps considérable. Et plus tard, cela permettra aussi d'exécuter avec différents jeux de données (niveaux d'énergies, canaux...).
+
+\subsection{Données}
+
+Donc bien sûr, il s'agit des mêmes fichiers \SLCIO que pour le programme \original \Figure{\ref{data:list}}
+
+\subsection{Programme : \processor}
+
+Le but est toujours la conversion de chaque dossier de fichiers \SLCIO en un seul fichier \ROOT.
+
+Pour aider à la lisibilité du programme, j'ai aussi développé une nouvelle classe qui permet de simplifier sa lecture.
+Ma classe \texttt{PDGInfo} permet de manipuler plus facilement les outils du PDG, grâce à une correspondance entre les codes entiers des particules et leurs noms, ainsi que quelques méthodes et tests booléennes\footnote{\url{https://github.com/alexhxia/nnhAnalysis/blob/main/nnhProgram/ilcsoft/processor/include/PDGInfo.hh}}.
+
+\subsection{Programme : \analysis}
+
+La encore le fonctionnement global reste inchangé, par rapport à \original
