--- a/LaTeX/Rapport/Introduction.tex
+++ b/LaTeX/Rapport/Introduction.tex
@@ -1,4 +1,4 @@
-% Introduction
+ev Introduction
 
 \chapter{Introduction}
 
@@ -19,7 +19,7 @@ Comme il s'agit de particules composites, ce sont pas les protons qui collisionn
 Chacun porte une fraction indéterminée de l'énergie du proton. 
 On ignore donc l'énergie de la collision en amont, il s'agit d'un paramètre libre. 
 
-C'est pourquoi, ils sont utiles pour la découverte de nouvelles particules de masse inconnue, puisqu'ils permettent de balayer tout le spectre de masse sous la gamme d'énergie du collisionneur (au LHC < 14 \TeV)\footnote{D'où l'intérêt de nouveaux collisionneurs à des énergies plus élevées et donc des masses de particules produites plus lourdes.}.
+C'est pourquoi, ils sont utiles pour la découverte de nouvelles particules de masse inconnue, puisqu'ils permettent de balayer tout le spectre de masse sous la gamme d'énergie du collisionneur (au LHC < 14 $\TeV$)\footnote{D'où l'intérêt de nouveaux collisionneurs à des énergies plus élevées et donc des masses de particules produites plus lourdes.}.
 
 \subsection{Collisionneurs leptoniques}
 
