--- a/LaTeX/Rapport/figure/tabular/bestSelectionFiles.tex
+++ b/LaTeX/Rapport/figure/tabular/bestSelectionFiles.tex
@@ -14,7 +14,7 @@
 %	\label{files:bestSelection}
 %\end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
 	\centering
 	\begin{tabular}{ | c | c | c | c | }
 		\hline
