--- a/LaTeX/Rapport/figure/tikz/orgaFinal.tex
+++ b/LaTeX/Rapport/figure/tikz/orgaFinal.tex
@@ -1,6 +1,6 @@
 % Organisation du projet final : https://github.com/alexhxia/nnhAnalysis
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
 	\center
 	\begin{tikzpicture}
 	
