--- a/LaTeX/Rapport/figure/tikz/orgaInit.tex
+++ b/LaTeX/Rapport/figure/tikz/orgaInit.tex
@@ -1,6 +1,6 @@
 % Organisation du projet initial : https://github.com/ggarillot/nnhAnalysis/tree/refactor
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
 	\centering
 	\begin{tikzpicture}
 
