--- a/LaTeX/Rapport/iLCSoft.tex
+++ b/LaTeX/Rapport/iLCSoft.tex
@@ -3,7 +3,7 @@
 
 \section{Présentation du Projet ILC}
 
-Le projet ILC (International Linear Collider) est un collisionneur linéaire, électron-positron, de 31 km conçu pour atteindre une énergie de centre de masse de 500 \GeV \cite{cern:ilc}. \\
+Le projet ILC (International Linear Collider) est un collisionneur linéaire, électron-positron, de 31 km conçu pour atteindre une énergie de centre de masse de 500 $\GeV$\cite{cern:ilc}. \\
 
 \begin{figure}[h!]
 	\center
@@ -47,7 +47,7 @@ En résumer, ce projet permet l'analyse des collisions survenues dans ce détect
 Malheureusement, pour le temps de ce stage, je n'ai pas obtenu l'accès au serveur, donc je n'ai pas pu utilisé \texttt{miniDSTMarker}. Je l'ai donc pas testé, ni pu développer ma propre version. C'est pourquoi, j'ai décidé de ne pas l'inclure dans mon propre code.\\
 
 % données locales
-Pour que je puisse travailler, on a mis à ma disposition certains de quelqu'un de ces fichiers, ceux des collisions à 250 \GeV. Soient 66 dossiers \Figure{\ref{data:list}} de fichiers \LCIO, où chaque nom correspond au code du type de processus \Figure{\ref{data:def}}.
+Pour que je puisse travailler, on a mis à ma disposition certains de quelqu'un de ces fichiers, ceux des collisions à 250 $\GeV$. Soient 66 dossiers \Figure{\ref{data:list}} de fichiers \LCIO, où chaque nom correspond au code du type de processus \Figure{\ref{data:def}}.
 
 \begin{figure}[h!]
 	\includegraphics[width=\textwidth]{../img/listeProcessus.png} 
@@ -84,8 +84,8 @@ Et par le type de particules produites par un boson de Higgs, \cad les canaux \b
 	\centering
 	\includegraphics[width=\textwidth]{../img/Higgs_decay_125GeV.png} 
 	\caption{
-		Les modes de désintégrations du boson de Higgs à 125 \GeV 
-		\cite{liu:tel-03405418}
+		Les modes de désintégrations du boson de Higgs à 125 $\GeV$
+		\cite{liu:tel-03405418}.
 	}
 \end{figure}
 
