--- a/LaTeX/Rapport/figure/tabular/splitFiles.tex
+++ b/LaTeX/Rapport/figure/tabular/splitFiles.tex
@@ -12,7 +12,7 @@
 %	\caption{Fichiers où les évènements sont séparés en fonction des caractéristiques des polarisations des particules incidentes et des types de particules résultantes.}
 %\end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
 	\centering
 	\begin{tabular}{ | c | c | c | c | }
 		\hline
