--- a/LaTeX/Rapport/figure/tabular/statsFiles.tex
+++ b/LaTeX/Rapport/figure/tabular/statsFiles.tex
@@ -10,7 +10,7 @@
 %	\label{files:stats}
 %\end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
 	\centering
 	\begin{tabular}{ | c | c | c | c | }
 		\hline
